footer for home pg

--- a/index.html
+++ b/index.html
@@ -388,49 +388,49 @@
                 </button>
             </div>
         </div>
-        <div class="row mt-5">
-            <hr class="yellowJ hrLineJ">
-        </div>
+        <hr class="yellowJ hrLineJ mt-4">
 
-        <div class="container-fluid footerPaddingJ">
-            <div class="row">
-                <div class="col-3">
-                    <div class="row yellowJ">
-                        <h2>Best Sandwiches</h2>
-                    </div>
-                    <div class="row yellowJ">
-                        <h2>& Smoothies</h2>
-                    </div>
+    <div class="container-fluid footerPaddingJ">
+        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+            <div class="col-4" style="padding-left: 3%;">
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">Best Sandwiches</h2>
                 </div>
-                <div class="col-9">
-                    <div class="row">
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ">Hours</p>
-                                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
-                            </div>
+                <div class="row yellowJ abrilFatfaceJ">
+                    <h2 class="footerFontSize3">& Smoothies</h2>
+                </div>
+            </div>
+            <div class="col" style="padding-left: 2%;">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                            <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
-                    
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ">Contact Us</p>
-                                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
-                            </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                         </div>
-                    
-                        <div class="col">
-                            <div class="row">
-                                <p class="yellowJ">Links</p>
-                            </div>
-                            <div class="row">
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
-                            </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="row">
+                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                        </div>
+                        <div class="row">
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
+                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
+                            <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
+                                    alt=""></a>
                         </div>
                     </div>
                 </div>
