--- a/index.html
+++ b/index.html
@@ -25,22 +25,30 @@
                     <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
                         <div class="" style="width: 100%;">
                             <div class="row">
-                                
+
                                 <div class="col centerJ">
                                     <div class="row evenJ" style="width: 700px; padding-top: 40px;">
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;" href="./pages/Menu.html">Menu</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;" href="./pages/ContactUs.html">Contact Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page" href="./pages/AboutUs.html">About
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
+                                            href="./pages/Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
+                                            href="./pages/ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;"
+                                            aria-current="page" href="./pages/AboutUs.html">About
                                             Us</a>
-                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;" href="./pages/BanhMi.html">Banh Mi?</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
+                                            href="./pages/BanhMi.html">Banh Mi?</a>
                                     </div>
                                 </div>
 
                                 <div class="col-1 centerJ">
-                                    <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                                    <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
+                                            alt=""></a>
                                 </div>
-                                <div class="col yugiJ alignCenterJ"><h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches & Smothies</h1></div>
-                                
+                                <div class="col yugiJ alignCenterJ">
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                                        Smothies</h1>
+                                </div>
+
                             </div>
 
                         </div>
@@ -53,64 +61,62 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="5000">
-                <img src="./assets/ben-lei-ubBWnvrsARk-unsplash (1).jpg" class="d-block w-100 carouselHeightJ imgCoverJ"
+                <img src="./assets/realBanhMI.png" class="d-block w-100 carouselHeightJ imgCoverJ"
                     alt="Picture of tasty Banh Mi">
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="./assets/banh mi 3.png" class="d-block w-100 carouselHeightJ imgCoverJ"
+                <img src="./assets/realBanhMi2.png" class="d-block w-100 carouselHeightJ imgCoverJ"
                     alt="Picture of tasty Banh Mi">
             </div>
             <div class="carousel-item" data-bs-interval="5000">
-                <img src="./assets/banh mi pic2.png" class="d-block w-100 carouselHeightJ imgCoverJ"
+                <img src="./assets/realBanhMi3.png" class="d-block w-100 carouselHeightJ imgCoverJ"
                     alt="Picture of tasty Banh Mi">
             </div>
         </div>
     </div>
 
-    <div class="container-fluid bgWhiteJ" style="padding-top: 100px;">
+    <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ" style="width: 1040px;">"A banh mi a day keeps the hunger away"
+    </h1>
+
+    <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 45px;">
         <div class="row">
             <div class="col-4 ">
                 <div class="row centerJ">
                     <img class="infoLogoSizeJ" src="./assets/open-sign.png" alt="">
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Mon - Tues: 9-5</h3>
+                <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
+                    <h3 class="infoTxtSizeJ">OPEN HOURS</h3>
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Wednesday: CLOSED</h3>
-                </div>
-                <div class="row txtCenterJ">
-                    <h3>Thu - Sun: 9-5</h3>
+                <div class="row txtCenterJ centerJ sansCollectionJ" style="padding-top: 10px">
+                    <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 360px;">Mon - Tues: 9-5
+                        Wednesday: CLOSED
+                        Thu - Sun: 9-5
+                    </h3>
                 </div>
 
             </div>
             <div class="col-4">
-                <div class="row centerJ"><img src="./assets/location.png" alt=""
-                        style="height: 144px; width: 144px; margin-top: 25px;">
+                <div class="row centerJ"><img class="infoLogoSizeJ2" src="./assets/location.png" alt="">
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Mon - Tues: 9-5</h3>
+                <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
+                    <h3 class="infoTxtSizeJ">LOCATION</h3>
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Wednesday: CLOSED</h3>
+                <div class="row txtCenterJ centerJ sansCollectionJ" style="padding-top: 10px">
+                    <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 420px;">3330 E Hammer Ln Ste C Stockton, CA
+                        95212</h3>
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Thu - Sun: 9-5</h3>
-                </div>
+
 
             </div>
             <div class="col-4">
                 <div class="row centerJ">
                     <img class="infoLogoSizeJ imgCoverJ" src="./assets/contact-mail.png" alt="">
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Mon - Tues: 9-5</h3>
+                <div class="row txtCenterJ abrilFatfaceJ" style="padding-top: 30px">
+                    <h3 class="infoTxtSizeJ">CONTACT</h3>
                 </div>
-                <div class="row txtCenterJ">
-                    <h3>Wednesday: CLOSED</h3>
-                </div>
-                <div class="row txtCenterJ">
-                    <h3>Thu - Sun: 9-5</h3>
+                <div class="row txtCenterJ centerJ sansCollectionJ" style="padding-top: 10px">
+                    <h3 class="infoTxtSizeJ sansCollectionJ" style="width: 420px;">(209) 475-0652</h3>
                 </div>
 
             </div>
@@ -390,60 +396,62 @@
         </div>
         <hr class="yellowJ hrLineJ mt-4">
 
-    <div class="container-fluid footerPaddingJ">
-        <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
-            <div class="col-4" style="padding-left: 3%;">
-                <div class="row yellowJ abrilFatfaceJ">
-                    <h2 class="footerFontSize3">Best Sandwiches</h2>
-                </div>
-                <div class="row yellowJ abrilFatfaceJ">
-                    <h2 class="footerFontSize3">& Smoothies</h2>
-                </div>
-            </div>
-            <div class="col" style="padding-left: 2%;">
-                <div class="row">
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
-                            <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                        </div>
+        <div class="container-fluid footerPaddingJ">
+            <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+                <div class="col-4" style="padding-left: 3%;">
+                    <div class="row yellowJ abrilFatfaceJ">
+                        <h2 class="footerFontSize3">Best Sandwiches</h2>
                     </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
-                            <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
-                        </div>
+                    <div class="row yellowJ abrilFatfaceJ">
+                        <h2 class="footerFontSize3">& Smoothies</h2>
                     </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                </div>
+                <div class="col" style="padding-left: 2%;">
+                    <div class="row">
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                                <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+                            </div>
                         </div>
-                        <div class="row">
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
-                            <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
-                                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
-                            <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
-                                    alt=""></a>
+
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
+                            </div>
+                            <div class="row">
+                                <a class="footerIconsJ"
+                                    href="https://m.facebook.com/profile.php?id=111693338885516"><img class="img-fluid"
+                                        src="../assets/FACEBOOK.png" alt=""></a>
+                                <a class="footerIconsJ"
+                                    href="https://m.facebook.com/profile.php?id=111693338885516"><img class="img-fluid"
+                                        src="../assets/icons8-yelp-100.png" alt=""></a>
+                                <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
+                                        alt=""></a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
