--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -56,7 +56,7 @@
 
     <video autoplay loop class="videoJ" src="../assets/pexels-marygrace-caneba-5452068 (2160p).mp4"></video>
 
-    <h1 class="absoluteJ whiteJ behindTheCounterJ yugiJ">Behind The Counter</h1>
+    <h1 class="absoluteJ whiteJ behindTheCounterJ sansCollectionJ">Behind The Counter</h1>
 
 
     <div class="container-fluid bgWhiteJ" style="margin-top: -5px">
