--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
     <h1 class="absoluteJ whiteJ sloganJ sansCollectionJ" style="width: 1040px;">"A banh mi a day keeps the hunger away"
     </h1>
 
-    <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 45px;">
+    <a class="absoluteJ viewMenuJ" href="#menu"><button class="btn btn-primary viewMenuBtnJ sansCollectionJ">View Menu</button></a>
+
+    <div class="container-fluid bgWhiteJ" style="padding-top: 50px; padding-bottom: 100px;">
         <div class="row">
             <div class="col-4 ">
                 <div class="row centerJ">
@@ -106,6 +108,10 @@
                         95212</h3>
                 </div>
 
+                <div class="row" style="padding-top: 75px;">
+                    <a class="centerJ" href="./pages/ContactUs.html"><button class="btn btn-primary" style="width: 270px; height: 100px;">Learn More</button></a>
+                </div>
+
 
             </div>
             <div class="col-4">
@@ -126,29 +132,27 @@
     <div class="container-fluid">
         <div class="row homePageMargin">
             <div class="col">
-                <h2 class="whiteJ">Vietnamese Cuisine</h2>
+                <h2 class="whiteJ abrilFatfaceJ">Vietnamese Cuisine</h2>
             </div>
         </div>
         <div class="row homePageMargin">
-            <div class="col-3">
+            <div class="col-4">
                 <div class="row">
-                    <h1 class="whiteJ">Popular</h1>
+                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px;">Popular Sandwiches</h1>
                 </div>
-                <div class="row">
-                    <h1 class="whiteJ">Sandwiches</h1>
-                </div>
+                
 
             </div>
-            <div class="col-9">
-                <p class="whiteJ">At best sandwiches we offer the many sandwiches that are apart of the Vietnamese
+            <div class="col-8">
+                <p id="menu" class="whiteJ foodInfoJ sansCollectionJ">At best sandwiches we offer the many sandwiches that are apart of the Vietnamese
                     cuisine. Don’t be afraid to order yourself a sandwich and give it a try, because I guarantee that
                     you won’t regret it!. Down below are our top 5 popular sandwiches.</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row evenJ homePageMargin">
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 280px;">
+                    <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -156,8 +160,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 280px;">
+                    <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -165,8 +169,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 280px;">
+                    <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -174,8 +178,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 280px;">
+                    <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -183,8 +187,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" style="width: 280px;">
+                    <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -211,7 +215,7 @@
 
             </div>
             <div class="col-9">
-                <p class="whiteJ">We don’t just offer sandwiches, we also offer tasty drinks! We have a wide variety of
+                <p class="whiteJ foodInfoJ sansCollectionJ">We don’t just offer sandwiches, we also offer tasty drinks! We have a wide variety of
                     drinks and just like the sandwiches you won’t regret ordering yourself a drink. I personally
                     recommend any of the 5 drinks below, because I don’t think you can go wrong with any of those
                     options.</p>
@@ -219,7 +223,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 280px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -228,7 +232,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 280px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -237,7 +241,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 280px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -246,7 +250,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 280px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -255,7 +259,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card" style="width: 280px;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
