--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                     options.</p>
             </div>
         </div>
-        <div class="row">
+        <div class="row evenJ homePageMargin">
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -233,7 +233,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -242,7 +242,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -251,7 +251,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -260,7 +260,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
