--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <div class="container-fluid">
         <div class="row homePageMargin">
             <div class="col">
-                <h2 class="whiteJ abrilFatfaceJ">Vietnamese Cuisine</h2>
+                <h2 class="whiteJ abrilFatfaceJ cuisineJ">Vietnamese Cuisine</h2>
             </div>
         </div>
         <div class="row homePageMargin">
@@ -201,20 +201,17 @@
         </div>
         <div class="row homePageMargin">
             <div class="col">
-                <h2 class="whiteJ">Asian Cuisine</h2>
+                <h2 class="whiteJ abrilFatfaceJ cuisineJ">Asian Cuisine</h2>
             </div>
         </div>
         <div class="row homePageMargin">
-            <div class="col-3">
+            <div class="col-4">
                 <div class="row">
-                    <h1 class="whiteJ">Popular</h1>
-                </div>
-                <div class="row">
-                    <h1 class="whiteJ">Drinks</h1>
+                    <h1 class="whiteJ abrilFatfaceJ" style="width: 300px;">Popular Drinks</h1>
                 </div>
 
             </div>
-            <div class="col-9">
+            <div class="col-8">
                 <p class="whiteJ foodInfoJ sansCollectionJ">We don’t just offer sandwiches, we also offer tasty drinks! We have a wide variety of
                     drinks and just like the sandwiches you won’t regret ordering yourself a drink. I personally
                     recommend any of the 5 drinks below, because I don’t think you can go wrong with any of those
@@ -224,7 +221,7 @@
         <div class="row evenJ homePageMargin">
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="./assets/" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -233,7 +230,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -242,7 +239,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -251,7 +248,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
@@ -260,7 +257,7 @@
             </div>
             <div class="col">
                 <div class="card" style="width: 280px;">
-                    <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
