--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div class="row evenJ homePageMargin">
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -178,7 +178,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -187,7 +187,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -220,7 +220,7 @@
         </div>
         <div class="row evenJ homePageMargin">
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -238,7 +238,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -247,7 +247,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -256,7 +256,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card" style="width: 280px;">
+                <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/drinkCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
